messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: blue  # Initially points to blue version
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
