messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: messaging-app.local  # Local domain for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
